[gd_scene load_steps=3 format=3 uid="uid://dc4yocdeqtyh0"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_j5xcq"]
[ext_resource type="Texture2D" uid="uid://b211igfeqljvb" path="res://Assets/MainMenu.webp" id="2_1qo88"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j5xcq")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.998
offset_top = 2.0
offset_right = 4.0
offset_bottom = 4.29199
texture = ExtResource("2_1qo88")
expand_mode = 1

[node name="StartGame1Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.09
anchor_top = 0.663
anchor_right = 0.295
anchor_bottom = 0.777
offset_left = 0.229996
offset_top = -0.298035
offset_right = -0.13501
offset_bottom = 0.0579834
text = "Game1"

[node name="StartGame2Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.415
anchor_top = 0.658
anchor_right = 0.614
anchor_bottom = 0.779
offset_left = 0.504974
offset_top = -0.0680237
offset_right = 0.0579834
offset_bottom = -0.234009
text = "Game2"

[node name="StartGame3Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.728
anchor_top = 0.656
anchor_right = 0.933
anchor_bottom = 0.78
offset_left = -0.384033
offset_top = 1.224
offset_right = 0.250977
offset_bottom = 0.119934
text = "Game3"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.336
anchor_top = 0.085
anchor_right = 0.697
anchor_bottom = 0.331
offset_left = -18.408
offset_top = 141.09
offset_right = -17.6411
offset_bottom = 141.174
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 49
text = "Learning Game"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="StartGame1Button" to="." method="_on_start_game_1_button_pressed"]
[connection signal="pressed" from="StartGame2Button" to="." method="_on_start_game_2_button_pressed"]
[connection signal="pressed" from="StartGame3Button" to="." method="_on_start_game_3_button_pressed"]
